Major reworks to help and  some extra debug info

--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -83,5 +83,8 @@
     },
     "714085300967702538": {
         "prefix": "//"
+    },
+    "745594201542230056": {
+        "prefix": "//"
     }
 }
