--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -35,7 +35,7 @@
         "prefix": "//"
     },
     "534450100890763302": {
-        "locale": "zh_CN",
+        "locale": "en_EN",
         "prefix": "//"
     },
     "438848185008390158": {
