--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -39,7 +39,8 @@
         "prefix": "//"
     },
     "438848185008390158": {
-        "prefix": "//"
+        "prefix": "//",
+        "locale": "en_EN"
     },
     "893537709400924210": {
         "prefix": "//"
